gcc-14.2.0/gcc/testsuite/gdc.test/compilable/extra-files/pkgDIP37_10302/package.d
version https://git-lfs.github.com/spec/v1
oid sha256:f48d01c0717b506ad31eb15c4f095abb446845439bc33760a0d01b40b8b4dbd1
size 58
